# tech_challenge_5_MLOps

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ts_test.py
.github/workflows/: ci.yml
data/experiments/etapa3/: metrics_timeseries.parquet
data/kaggle/scripts/: EDA.ipynb  info.txt
data/kaggle/synthetic_enrichment/: delayed_rewards.parquet  offer_catalog.json  offer_events.parquet
data/kaggle_db/scripts/: EDA.ipynb  kaggle_variables.py
datahon-grupo-XX/.github/workflows/: ci.yml
docs/: model-card.md
evaluation/: ragas_eval.py
src/: EDA.ipynb  generate_synthetic_events.py  kaggle_variables.py  run_etapa3_experiment.py
src/bandit/: catalog.py  environment.py  metrics.py  policies.py  simulator.py
src/event_generator/: generate_synthetic_events.py
tests/: conftest.py  test_dummy.py  test_features.py
